prometheus/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-prometheus-ui
  namespace: monitoring
  annotations:
#    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
#  - host: prometheus.example.com
#    http:
#      paths:
#      - backend:
#          serviceName: prometheus-service
#          servicePort: 8080
  - http:
      paths:
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
           name: prometheus-service-c
           port: 
            number: 9090
